Parcel - TypeScript：ビルドファイルのリファクタリング

--- a/myproject/src/index.html
+++ b/myproject/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>今日の気温ss</title>
+  <title>今日の気温</title>
   <link rel="stylesheet" href="style/style.css">
   <script src="scripts/index.ts" defer></script>
 </head>
